test/compile_failure/33_printf_dynamic_format.c
// EXPECT-ERRORS: 1
// EXPECT: printf format must be a string literal
int main() {
    char *format = "%d";
    printf(format, 42);
    return 0;
}
